--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 
 
+reqwest = { version = "0.11.20", features = ["blocking", "json"] }
 time = "0.3.28"
 tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
 pem = "3.0.2"
@@ -15,3 +16,6 @@ rcgen = { version = "0.11.1", features = ["pem", "x509-parser"] }
 sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"] }
 x509-parser = "0.15.1"
 clap = { version = "4", features = ["derive"] }
+serde = "1.0.188"
+serde_json = "1.0.107"
+thiserror = "1.0.48"
