--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ clap = { version = "4", features = ["derive"] }
 serde = "1.0.188"
 serde_json = "1.0.107"
 thiserror = "1.0.48"
+openssl = "0.10.57"
