--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2021"
 
 reqwest = { version = "0.11.20", features = ["blocking", "json"] }
 time = "0.3.28"
+tracing = "0.1"
+tracing-subscriber = "0.3.17"
 tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
 pem = "3.0.2"
 rcgen = { version = "0.11.1", features = ["pem", "x509-parser"] }
@@ -20,3 +22,6 @@ serde = "1.0.188"
 serde_json = "1.0.107"
 thiserror = "1.0.48"
 openssl = "0.10.57"
+picky = { version = "7.0.0-rc.8", default-features = false, features = [
+	"x509",
+] }
