--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,9 @@ clap = { version = "4", features = ["derive"] }
 serde = "1.0.188"
 serde_json = "1.0.107"
 thiserror = "1.0.48"
-openssl = "0.10.57"
+openssl = { version = "0.10.57" }
+# anyhow = "1.0.75"
+color-eyre = "0.6.2"
 picky = { version = "7.0.0-rc.8", default-features = false, features = [
 	"x509",
 ] }
